@@ -41,6 +41,8 @@ GROUP_SIGNATURE	= See you!|			Your admin|
 #devices.
 #MAILDEV        =
 #
+#Here you can set a charset for emails sent by warnquota (e.g. UTF-8)
+#CHARSET	= 
 # If you are using LDAP mail lookups.
 # host, port, tls, binddn, and bindpw are straight forward.
 # LDAP_BASEDN is your search base dn
