@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.16 to 3.17
+* Implement setting of charset for emails sent by warnquota (Michael Meskes)
 * Added quota_nld to the list of installed programs (Jan Kara)
 * some typos fixes (Matthew Boyle)
 * fixed possible segfault when unpriviledged user run edquota (Matthew Boyle)
